--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -98,11 +98,13 @@
   text-align: center;
 }
 
-.padding-bottom {
+.padding-bottom,
+.padding-down {
   padding-bottom: 2rem;
 }
 
-.padding-up {
+.padding-up,
+.padding-top {
   padding-top: 3rem;
 }
 
