--- a/assets/css/lightbs.less
+++ b/assets/css/lightbs.less
@@ -1,8 +1,8 @@
 // Define basic color scheme
 @discord-purple: #7289da;
 @discord-dark: #2c2f33;
-@github-light: #ffffff;
-@github-dark: #23272a;
+@github-light: #23272a;
+@github-dark: #ffffff;
 @icon-black: #181818;
 @double-size: 2rem;
 @morethan-double: 2.5rem;
@@ -50,33 +50,56 @@
 
 // backgrounds
 .bg-carbon {
-  background-color: rgb(116, 116, 116);
+  background-color: #556;
   background-image: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 1),
-      rgba(0, 0, 0, 0) 20%,
-      rgba(0, 0, 0, 0) 80%,
-      rgba(0, 0, 0, 1)
+      30deg,
+      #445 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #445 87.5%,
+      #445
     ),
     linear-gradient(
-      45deg,
-      black 25%,
-      transparent 25%,
-      transparent 75%,
-      black 75%,
-      black
+      150deg,
+      #445 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #445 87.5%,
+      #445
     ),
     linear-gradient(
-      45deg,
-      black 25%,
-      transparent 25%,
-      transparent 75%,
-      black 75%,
-      black
+      30deg,
+      #445 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #445 87.5%,
+      #445
     ),
-    linear-gradient(to bottom, rgb(8, 8, 8), rgb(40, 40, 40));
-  background-size: 100% 100%, 10px 10px, 10px 10px, 10px 5px;
-  background-position: 0px 0px, 0px 0px, 5px 5px, 0px 0px;
+    linear-gradient(
+      150deg,
+      #445 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #445 87.5%,
+      #445
+    ),
+    linear-gradient(
+      60deg,
+      #99a 25%,
+      transparent 25.5%,
+      transparent 75%,
+      #99a 75%,
+      #99a
+    ),
+    linear-gradient(
+      60deg,
+      #99a 25%,
+      transparent 25.5%,
+      transparent 75%,
+      #99a 75%,
+      #99a
+    );
+  background-size: 80px 140px;
 }
 
 .bg-success {
